--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "gulp-uglify-es": "^3.0.0",
     "jquery": "^3.6.0",
     "sass": "^1.52.1"
+  },
+  "dependencies": {
+    "swiper": "^9.1.0"
   }
 }
